scrollbar fix

--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ h2
 {
     height: 250px;
     width: 100%;
-    padding-right: 25%;
+    padding-right: 500%;
     overflow-y: scroll;
 }
 
